# dingo_mujoco_ros2

./: .gitignore  README.md  start_keyboard_teleop.sh  start_simulation.sh
firmware/esp32_servo_bridge/: README.md  esp32_servo_bridge.ino
src/dingo_config/: CMakeLists.txt  package.xml  setup.bash
src/dingo_config/config/: dingo_gait_controller_cpp.yaml  mujoco_dingo_sim.yaml
src/dingo_config/launch/: mujoco.launch.py
src/dingo_config/mujoco/: dingo_urdf_1to1.xml
src/dingo_config/urdf/: dingo.urdf.xacro
src/dingo_gait_controller_cpp/: CMakeLists.txt  package.xml
src/dingo_gait_controller_cpp/include/dingo_gait_controller_cpp/: controller_node.hpp  math_utils.hpp  mujoco_kinematics.hpp  trot_gait.hpp  types.hpp
src/dingo_gait_controller_cpp/include/dingo_gait_controller_cpp/model/: mujoco_kinematics.hpp  types.hpp
src/dingo_gait_controller_cpp/include/dingo_gait_controller_cpp/node/: controller_node.hpp
src/dingo_gait_controller_cpp/include/dingo_gait_controller_cpp/planning/: trot_gait.hpp
src/dingo_gait_controller_cpp/include/dingo_gait_controller_cpp/utils/: math_utils.hpp
src/dingo_gait_controller_cpp/src/: main.cpp
src/dingo_gait_controller_cpp/src/model/: mujoco_kinematics.cpp
src/dingo_gait_controller_cpp/src/node/: controller_node.cpp
src/dingo_gait_controller_cpp/src/planning/: trot_gait.cpp
src/dingo_mujoco/: package.xml  setup.cfg  setup.py
src/dingo_mujoco/dingo_mujoco/: mujoco_dingo_sim.py
src/dingo_servo_bridge/: package.xml  setup.cfg  setup.py
src/dingo_servo_bridge/dingo_servo_bridge/: servo_bridge_node.py
