<?xml version="1.0"?>
<package format="3">
  <name>dingo_gait_controller_cpp</name>
  <version>0.1.0</version>
  <description>C++ CHAMP-like gait + MuJoCo Jacobian IK controller for Dingo (cmd_vel -> joint targets).</description>
  <maintainer email="urlab@example.com">urlab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-mujoco</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
